trunk/Archive2/6f/f4624098ad891d/output
main.cpp:18:78: error: expected ';' after top level declarator
std::ostream& operator<<(std::ostream& out, const vector<Employees*>& midzer)
                                                                             ^
                                                                             ;
main.cpp:29:10: error: C++ requires a type specifier for all declarations
Manager::Manger(const char* f, const char* l, int s, int m, int v)
~~~~~~~  ^
main.cpp:30:1: error: only constructors take base initializers
:mFirstName(f), mLastName(l), mSalary(s), mNumberOfMeetingsPerWeek(m), mNumberOfVacationDaysPerYear(v)
^
3 errors generated.
